[package]
name = "gnucobol-rs-intrinsics"
version = "0.1.0"
edition = "2021"
description = "gnucobol-rs intrinsic functions: an ergonomic FUNCTION-intrinsic API (NUMVAL, INTEGER, MOD/REM, UPPER/LOWER/REVERSE, ORD/CHAR, LENGTH, date) over the oracle-proven gnucobol-rs core primitives."
authors = ["infinityabundance"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/infinityabundance/gnucobol-rs-intrinsics"
readme = "README.md"
keywords = ["cobol", "gnucobol", "intrinsic", "numval", "function"]
categories = ["encoding", "parsing"]

[dependencies]
gnucobol-rs = "0.7"
